<resources>
    <string name="app_name">PrimeraAppAndroid</string>
    <string name="titulo_nota">Titulo</string>
    <string name="texto_nota">Texto</string>
    <string name="btnConfirmar">Confirmar</string>
    <string name="menuAddNota">Añadir Nota</string>
    <string name="menuSendMail">Enviar Email</string>
    <string name="menuAddCita">Añadir Cita</string>
    <string name="menuAbout">Acerca de</string>
    <string name="menuShowMenu">Mostrar Menu</string>
    <string name="menuAddFriend">Añadir Amigo</string>
    <string name="portada">Programación Multimedia y Dispositivos Móviles</string>
    <string name="acercaDe">Aplicación realizada por Diego Sánchez para la asignatura de Programación Multimedia
        y Dispositivos Móviles
    </string>
    <string name="redes">Redes Sociales</string>
    <string name="confirmarNota">Su nota se ha creado con exito</string>
    <string name="contactoName">Nombre</string>
    <string name="contactoEmail">Email</string>
    <string name="contactoPhone">Movil</string>
    <string name="contactoNuevo">Contacto Nuevo</string>
    <string name="mailNoValido">Escribe un Email válido</string>
    <string name="rellenarCampos">Debes rellenar todos los campos</string>
    <string name="eventoTitulo">Nuevo Evento</string>
    <string name="eventoTituloEvent">Titulo</string>
    <string name="eventoLugar">Localización</string>
    <string name="eventoDesc">Descripción</string>
    <string name="rellenarObliga">Debes rellenar al menos el titulo</string>
    <string name="confirmarNotaNull">No se ha detectado ninguna aplicación de notas</string>
</resources>