<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddNotaActivity">

    <TextView
            android:text="@string/titulo_nota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/notaTextTitulo"
            android:textSize="18sp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="150dp"
            android:layout_marginEnd="183dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="40dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/notaTextAddTitulo"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="99dp"
            android:layout_marginEnd="99dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/notaTextTitulo" android:singleLine="true"
            android:selectAllOnFocus="false" android:background="#F6F2D6"/>
    <TextView
            android:text="@string/texto_nota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/notaTextTexto"
            android:textSize="18sp" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/notaTextAddTitulo" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="266dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="275dp"
            android:layout_height="198dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/notaTextAddTexto"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/notaTextTexto" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="66dp" android:layout_marginEnd="67dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/btnConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/notaBtnConfirmar"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/notaTextAddTexto" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="161dp" android:layout_marginEnd="162dp"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>